# aoc2021

./: .gitignore  Makefile  README.md  pyproject.toml
aoc/: __init__.py  common.py
aoc/d01/: __init__.py  main.py
aoc/d02/: __init__.py  main.py
aoc/d03/: __init__.py  main.py
aoc/d04/: __init__.py  main.py
aoc/d05/: __init__.py  main.py
aoc/d06/: __init__.py  main.py
aoc/d07/: __init__.py  main.py
aoc/d08/: __init__.py  main.py
aoc/d09/: __init__.py  main.py
aoc/d10/: __init__.py  main.py
data/d02/: example_01.txt  example_02.txt
data/d03/: example_01.txt  example_02.txt
data/d05/: example_01.txt  example_02.txt
data/d06/: example_01.txt  example_02.txt
data/d07/: example_01.txt  example_02.txt
data/d08/: example_01.txt  example_02.txt
data/d09/: example_01.txt  example_02.txt
data/d10/: example_01.txt  example_02.txt
tests/aoc/: test_base.py  test_d01.py  test_d02.py  test_d03.py  test_d04.py  test_d05.py  test_d06.py  test_d07.py  test_d08.py  test_d09.py  test_d10.py
