[tool.poetry]
name = "2021"
version = "0.1.0"
description = ""
authors = ["Kelly Littlepage <kelly.littlepage@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
aoctools = { git = "https://github.com/klittlepage/aoctools.git" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "*"
autopep8 = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
